# neural-city-playground

./: .gitignore  Copy of Brand & Supplier Info.xlsx  Copy of Statement Pharma Molasses and Distillery March 26.xlsx  README.md  index.html  package-lock.json  package.json  requirements.txt  setup.sh  tailwind.config.js
artifacts/: audit.json  command_center.json  data_quality.json  district_decision.json  districts.json  external_feed.json  model_results.json  product_intel.json  student_actions.json
artifacts/reports/: audit.json
docs/: architecture.md  dashboard_walkthrough.md  data_audit.md  explainability.md  feature_engineering.md  interventions.md  jury_talk_track.md
hackathon-permissions/: AP_District_geojson.geojson  AP_ULB_Geojson.geojson  SETUP.md  setup.sh  verification_engine_prompt.txt
hackathon-permissions/app/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
hackathon-permissions/verification_engine/: .env.example  .gitignore  README.md  config.py  pyproject.toml
hackathon-permissions/verification_engine/asset_extractor/: pdf_assets.py
hackathon-permissions/verification_engine/engine/: expression.py  verifier.py
hackathon-permissions/verification_engine/extractor/: llm_client.py  ocr.py  pdf_reader.py  prompt.py  runner.py  table_extractor.py
hackathon-permissions/verification_engine/integration/: react_export.py
hackathon-permissions/verification_engine/schema/: models.py
hackathon-permissions/verification_engine/scripts/: export_to_react.py  extract_rules.py  verify.py
hackathon-permissions/verification_engine/tests/: conftest.py  test_asset_extractor.py  test_end_to_end.py  test_expression.py  test_live_extraction.py  test_ocr.py  test_pdf_reader.py  test_react_export.py  test_runner_merge.py  test_schema.py  test_table_extractor.py  test_verifier.py
hackathon-permissions/verification_engine/tests/fixtures/: build_fixtures.py
hackathon-permissions/verification_engine/ui/: app.py
liquor-hackathon/: Copy of Label Approvals_2025_2026.xlsx  Copy of MONTH WISE DATA ID NDPL DPL GANJA FROM 2019 TO 09-02-2026.xlsx  Copy of Retailer Info.xlsx  DASHBOARD_WALKTHROUGH.md  README.md  setup.sh
liquor-hackathon/artifacts/: forecast_outlets.json  segments.json
liquor-hackathon/pipeline/: analytics.py  audit.py
liquor-hackathon/server/: main.py
liquor-hackathon/web/: package-lock.json
pipeline/: analytics.py  audit.py  etl.py  features.py  hotspot.py  intervene.py  run.py  train.py  utils.py
src/: App.jsx  index.css
tender-hackathon/: README.md  setup.sh
tender-hackathon/public_tender_collector/: README.md  SOURCES_REVIEW_LOG.md  config.yaml  main.py  pyproject.toml  requirements.txt  sample_seed_urls.csv  sample_seed_urls.live_demo.csv  sources.live_demo.yaml  sources.yaml
tender-hackathon/public_tender_collector/_live_demo/eprocure/public/: tender_page.html
tender-hackathon/public_tender_collector/collector/: __init__.py  audit_log.py  compliance.py  deduplicator.py  document_downloader.py  exporters.py  file_classifier.py  http_client.py  ids.py  link_extractor.py  ml_bridge.py  models.py  rate_limiter.py  relevance.py  robots_checker.py  settings.py  source_registry.py  storage.py  tender_search.py  text_extractor.py
tender-hackathon/public_tender_collector/collector/parsers/: __init__.py  base.py  cppp_parser.py  epublish_parser.py  gepnic_parser.py  state_portal_parser.py
tender-hackathon/public_tender_collector/data/exports/20260503T204757Z-57e25b/: compliance_report.csv  demo_dataset_manifest.json  document_metadata.csv  extracted_text_index.jsonl  failed_downloads.csv  relevance_summary.csv  run_manifest.json  tender_metadata.csv
tender-hackathon/public_tender_collector/data/metadata/: collector.db
tender-hackathon/public_tender_collector/data/processed/: 097f744b5536fb36.txt  1385694188254d3b.txt  2684bc548593191f.txt  40171ed94c97f4ac.txt  5c25777f6ceea3b6.txt  6e496312fbc9fa19.txt  e8a41536a8b6bc68.txt
tender-hackathon/public_tender_collector/docs/: README.md  architecture.md  data_model.md  onboarding.md  operations.md  troubleshooting.md
tender-hackathon/public_tender_collector/logs/: 20260503T204757Z-57e25b.jsonl
tender-hackathon/public_tender_collector/notebooks/: data_quality_check.ipynb
tender-hackathon/public_tender_collector/public_tender_collector.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tender-hackathon/public_tender_collector/tests/: conftest.py  test_classifier.py  test_compliance.py  test_deduplicator.py  test_exporters.py  test_link_extractor.py  test_no_network.py  test_rate_limiter.py  test_relevance.py  test_robots.py
tender-hackathon/public_tender_collector/tests/fixtures/html/: captcha_page.html  cppp_search_page.html  cppp_tender_page.html
tender-hackathon/tender_embeddings/: README.md  main.py  pyproject.toml
tender-hackathon/tender_embeddings/data/index/: manifest.json  meta.sqlite  vectors.npy
tender-hackathon/tender_embeddings/docs/: architecture.md
tender-hackathon/tender_embeddings/tender_embeddings/: __init__.py  builder.py  chunker.py  embedder.py  index.py  manifest_reader.py  matcher.py
tender-hackathon/tender_embeddings/tender_embeddings.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tender-hackathon/tender_embeddings/tests/: conftest.py  test_chunker.py  test_embedder.py  test_index_and_matcher.py
web/: .gitignore  package-lock.json  package.json  tailwind.config.ts
(+248 files in other folders)
